--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "slamby-api-updater",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "Slamby API Updater",
   "main": "app.js",
   "scripts": {
@@ -26,6 +26,7 @@
     "express": "^4.14.0",
     "octonode": "^0.7.6",
     "request": "^2.75.0",
-    "shelljs": "^0.7.4"
+    "shelljs": "^0.7.4",
+    "yamljs": "^0.2.8"
   }
 }
